# histarix

./: .env.example  .gitignore  Histarix_기획서.docx  Makefile  README.md  docker-compose.yml  package.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  cache.py  config.py  database.py  email.py  main.py  models.py  seed.py
backend/app/routers/: auth.py  chat.py  countries.py  history.py  onthisday.py  search.py
backend/app/schemas/: chat.py  country.py  history.py  onthisday.py
backend/app/services/: rest_countries.py  wikidata.py  wikimedia.py  wikipedia.py
backend/app/utils/: country_mapping.py  mappers.py
backend/histarix_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py
docs/: AI_협업_가이드.md  HISTOMAP_OpenAPI_가이드.xlsx
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/auth/: AuthButton.tsx
frontend/src/components/chat/: AIChatBot.tsx
frontend/src/components/country/: CountryHistory.tsx  CountryInfo.tsx  CountryPanel.tsx  HistoryTimeline.tsx
frontend/src/data/: landmarks.ts
frontend/src/hooks/: useCountryData.ts  useOnThisDay.ts  useTimeSlider.ts
frontend/src/lib/: api.ts  auth.ts  i18n.tsx  posthog.ts
frontend/src/services/: countryService.ts  onThisDayService.ts
frontend/src/types/: country.ts  history.ts  map.ts
nginx/: nginx.conf
(+11 files in other folders)
